Prvi dodani domaci radi

--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
   </head>
   <body>
     <h1>moja prva webstranica</h1>
+    <h2>Lista domaćih radova</h2>
+    <u1>
+      <li><a href="./domaci1.html">Prvi domaći rad</a></li>
+    </u1>
   </body>
 </html>
