Prvi dodani domaci rad

--- a/index.html
+++ b/index.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <meta name="description" content="opis sadržaja stranice" />
-    <meta name="author" content="ime autora stranice" />
+    <meta
+      name="description"
+      content="Front-End developer grupa - domaće zadaće"
+    />
+    <meta name="author" content="Ivana Bunjan" />
     <title>Meta oznake</title>
   </head>
   <body>
-    <h1>moja prva webstranica</h1>
+    <h1>Ivana Bunjan</h1>
     <h2>Lista domaćih radova</h2>
     <u1>
-      <li><a href="./domaci1.html">Prvi domaći rad</a></li>
+      <li><a href="./domaci1_5.10.html">Prvi domaći rad</a></li>
     </u1>
   </body>
 </html>
