Prvi domaci rad

--- a/domaci1_5.10.html
+++ b/domaci1_5.10.html
@@ -14,17 +14,17 @@
       Belle
     </h1>
 
-    <a href="https://lh3.googleusercontent.com/YXqQHO3Sh4Gxtv3i7-XJMQsx-vrGlNTJEIsIRfmMmEhNc-9K0b0sIsd6lxH7Hl1qQZUd7EUvPxxiJmJDuIEj15D0OybZW3j8msGazGWOz6oPRHeRkpuawUIK9PWSqIH2OtuClfq0uCM=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/YXqQHO3Sh4Gxtv3i7-XJMQsx-vrGlNTJEIsIRfmMmEhNc-9K0b0sIsd6lxH7Hl1qQZUd7EUvPxxiJmJDuIEj15D0OybZW3j8msGazGWOz6oPRHeRkpuawUIK9PWSqIH2OtuClfq0uCM=w600-h315-p-k" /> </a>
-    <!--Linkovi-->
+    <div style="text-align: center;"><a href="https://lh3.googleusercontent.com/YXqQHO3Sh4Gxtv3i7-XJMQsx-vrGlNTJEIsIRfmMmEhNc-9K0b0sIsd6lxH7Hl1qQZUd7EUvPxxiJmJDuIEj15D0OybZW3j8msGazGWOz6oPRHeRkpuawUIK9PWSqIH2OtuClfq0uCM=w2400?source=screenshot.guru"> <img src="https://lh3.googleusercontent.com/YXqQHO3Sh4Gxtv3i7-XJMQsx-vrGlNTJEIsIRfmMmEhNc-9K0b0sIsd6lxH7Hl1qQZUd7EUvPxxiJmJDuIEj15D0OybZW3j8msGazGWOz6oPRHeRkpuawUIK9PWSqIH2OtuClfq0uCM=w600-h315-p-k" /> </a></div>  
+     <!--Linkovi-->
     <h2>Linkovi</h2>
     <a href="https://www.akc.org/dog-breeds/golden-retriever/" >Općenito o zlatnim retriverima</a> | <a href="https://www.akc.org/dog-breeds/golden-retriever/" target="_blank"
     >Općenito o zlatnim retriverima - novi tab</a> | <a href="#bella">Najvažniji link</a>
     <!--unordered list - nepobrojana lista-->
     <h2>Osnovni podaci</h2>
     <u1>
-      <li>Ime: Bella</li>
-      <li>Datum rođenja: 15.9.2015.</li>
-      <li>Zanimanje: najbolji pas na svijetu</li>
+      <li><strong>Ime:</strong> Bella</li>
+      <li><strong>Datum rođenja:</strong> 15.9.2015.</li>
+      <li><strong>Zanimanje:</strong> najbolji pas na svijetu</li>
     </u1>
   <hr>
     <!--tablice-->
