--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       content="Front-End developer grupa - domaće zadaće"
     />
     <meta name="author" content="Ivana Bunjan" />
-    <title>Meta oznake</title>
+    <title>Ivana Bunjan - zadaće</title>
   </head>
   <body>
     <h1>Ivana Bunjan</h1>
