--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <h2>Lista domaćih radova</h2>
     <u1>
       <li><a href="./domaci1_5.10.html">Prvi domaći rad</a></li>
+      <li><a href="./pred3.html">Vježbe s 3. predavanja</a></li>
     </u1>
   </body>
 </html>
