--- a/pred3.html
+++ b/pred3.html
@@ -7,43 +7,58 @@
     <title>Predavanje 3</title>
   </head>
   <body>
-    <table border="1">
+    <table border="1" style="width: 100%; height: 700px">
+      <colgroup>
+        <col span="3" style="background-color: green" />
+      </colgroup>
       <caption>
         Stepenice
       </caption>
+      <thead>
+        <tr>
+          <th colspan="7">Naslovna celija <b>thead</b></th>
+        </tr>
+      </thead>
 
-      <tr>
-        <th colspan="6"></th>
-        <th rowspan="7"></th>
-      </tr>
+      <tbody>
+        <tr>
+          <th colspan="6"></th>
+          <th rowspan="7"></th>
+        </tr>
 
-      <tr>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th></th>
-        <th rowspan="4"></th>
-      </tr>
+        <tr>
+          <th></th>
+          <th></th>
+          <th></th>
+          <th></th>
+          <th></th>
+          <th rowspan="4"></th>
+        </tr>
 
-      <tr>
-        <th></th>
-        <th></th>
-        <th rowspan="3"></th>
-        <th colspan="2"></th>
-      </tr>
+        <tr>
+          <th></th>
+          <th></th>
+          <th rowspan="3"></th>
+          <th colspan="2"></th>
+        </tr>
 
-      <tr>
-        <th></th>
-        <th rowspan="2"></th>
-        <th></th>
-        <th></th>
-      </tr>
-      <tr>
-        <th></th>
-        <th></th>
-        <th></th>
-      </tr>
+        <tr>
+          <th></th>
+          <th rowspan="2"></th>
+          <th></th>
+          <th></th>
+        </tr>
+        <tr>
+          <th></th>
+          <th></th>
+          <th></th>
+        </tr>
+      </tbody>
+      <tfoot>
+        <tr>
+          <th colspan="7">Footer celija <b>tfooter</b></th>
+        </tr>
+      </tfoot>
     </table>
   </body>
 </html>
