--- a/pred3.html
+++ b/pred3.html
@@ -7,6 +7,58 @@
     <title>Predavanje 3</title>
   </head>
   <body>
+    <!--forma-->
+    <!--to su inputi za ispunjavanje npr podataka-->
+
+    <form action="#" method="get">
+      <input type="text" /><br />
+      <input type="email" /><br />
+      <input type="date" /><br />
+      <input type="number" /><br />
+
+      <!--atribut fname koji ima parametar name, value daje početnu vrijednost koja se može
+    mijenjati kasnije-->
+      <!--vide se u linku s get metodom svi unešeni podaci koji su gore,
+    a # koji se vidi je taj action koji nas vraća na našu
+početnu stranicu, za to služi hešteg, može se slati i 
+negdje drugdje, server npr-->
+      <!--kod post metode ne možemo vidjeti što smo unijeli, odnosno
+ona osoba koja želi presresti to ne može vidjeti-->
+
+      <!--TEXT INPUTI-->
+
+      <label for="fname">First name:</label><br />
+      <input type="text" id="fname" name="fname" value="John" /><br />
+      <label for="lname">Last name:</label><br />
+      <input type="text" id="lname" name="lname" value="Doe" /><br /><br />
+
+      <label for="placa">Odaberite zeljeni iznos place</label><br />
+      <input type="range" id="placa" name="placa" min"0" max"100000"><br /><br />
+
+      <!--radio botuni-->
+
+      <!--radio gumbi, dakle input type radio nam govori da može biti
+    SAMO JEDAN odabir isto dajemo id tj oznaku npr html za gumb
+i ondak asnije vraćamo value html, a ti radio gumbi se mogu povezati i razdovjiti
+po grupama ako je to nužno
+inputi koji će biti grupirani moraju imati isti NAME-->
+
+      <input type="radio" id="html" name="fav_language" value="HTML" />
+      <label for="html">HTML</label><br />
+      <input type="radio" id="css" name="fav_language" value="CSS" />
+      <label for="css">CSS</label><br />
+      <input
+        type="radio"
+        id="javascript"
+        name="fav_language"
+        value="JavaScript"
+      />
+      <label for="javascript">JavaScript</label>
+
+      <input type="submit" value="Submit" />
+    </form>
+
+    <!--tablica-->
     <table border="1" style="width: 100%; height: 700px">
       <colgroup>
         <col span="3" style="background-color: green" />
@@ -60,5 +112,6 @@
         </tr>
       </tfoot>
     </table>
+    <hr />
   </body>
 </html>
