--- a/pred3.html
+++ b/pred3.html
@@ -28,9 +28,15 @@ ona osoba koja želi presresti to ne može vidjeti-->
       <!--TEXT INPUTI-->
 
       <label for="fname">First name:</label><br />
-      <input type="text" id="fname" name="fname" value="John" /><br />
+      <input type="text" id="fname" name="fname" value="John" required /><br />
       <label for="lname">Last name:</label><br />
-      <input type="text" id="lname" name="lname" value="Doe" /><br /><br />
+      <input
+        type="text"
+        id="lname"
+        name="lname"
+        value="Doe"
+        size="300"
+      /><br /><br />
 
       <label for="placa">Odaberite zeljeni iznos place</label><br />
       <input type="range" id="placa" name="placa" min"0" max"100000"><br /><br />
@@ -53,7 +59,17 @@ inputi koji će biti grupirani moraju imati isti NAME-->
         name="fav_language"
         value="JavaScript"
       />
-      <label for="javascript">JavaScript</label>
+      <label for="javascript">JavaScript</label><br /><br />
+
+      <!--checkboxi, više opcija da se može označiti-->
+
+      <input type="checkbox" id="vehicle1" name="vehicle1" value="Bike" />
+      <label for="vehicle1"> I have a bike</label><br />
+      <input type="checkbox" id="vehicle2" name="vehicle2" value="Car" />
+      <label for="vehicle2"> I have a car</label><br />
+      <input type="checkbox" id="vehicle3" name="vehicle3" value="Boat" />
+      <label for="vehicle3"> I have a boat</label><br />
+      <br /><br />
 
       <input type="submit" value="Submit" />
     </form>
