--- a/index.html
+++ b/index.html
@@ -10,13 +10,31 @@
     />
     <meta name="author" content="Ivana Bunjan" />
     <title>Ivana Bunjan - zadaće</title>
+
+    <style>
+      body {
+        font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+        background-color: bisque;
+      }
+    </style>
   </head>
   <body>
     <h1>Ivana Bunjan</h1>
-    <h2>Lista domaćih radova</h2>
-    <u1>
-      <li><a href="./domaci1_5.10.html">Prvi domaći rad</a></li>
-      <li><a href="./pred3.html">Vježbe s 3. predavanja</a></li>
-    </u1>
+
+    <div style="float: left; width: 50%">
+      <h2>Lista domaćih radova</h2>
+      <u1>
+        <li><a href="./domaci1_5.10.html">Prvi domaći rad</a></li>
+        <li><a href="./domaci2_7.10.html">Drugi domaći rad</a></li>
+      </u1>
+    </div>
+    <div style="float: right; width: 50%">
+      <h2>Lista vježbi s predavanja</h2>
+      <ul>
+        <u1>
+          <li><a href="./pred3.html">Vježbe s 3. predavanja</a></li>
+        </u1>
+      </ul>
+    </div>
   </body>
 </html>
