--- a/domaci2_7.10.html
+++ b/domaci2_7.10.html
@@ -33,7 +33,7 @@
 
   <body>
     <h2>
-      <strong>Učlanjenje u Bookclub Narode knjižnice i čitaonice Sisak</strong>
+      <strong>Učlanjenje u Bookclub Narodne knjižnice i čitaonice Sisak</strong>
     </h2>
     <img
       class="background"
