--- a/pred3.html
+++ b/pred3.html
@@ -129,5 +129,17 @@ inputi koji će biti grupirani moraju imati isti NAME-->
       </tfoot>
     </table>
     <hr />
+
+    <p>Use the multiple attribute to allow the user to select more than one value.</p>
+
+<form action="#" method="get">
+  <label for="cars">Choose a car:</label>
+  <select id="cars" name="cars" size="4" multiple>
+    <option value="volvo">Volvo</option>
+    <option value="saab">Saab</option>
+    <option value="fiat">Fiat</option>
+    <option value="audi">Audi</option>
+  </select><br><br>
+  <input type="submit">
   </body>
 </html>
