--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       <ul>
         <u1>
           <li><a href="./pred3.html">Vježbe s 3. predavanja</a></li>
+          <li><a href="./pred4.html">Vježbe s 4. predavanja</a></li>
         </u1>
       </ul>
     </div>
