--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <h2>Lista domaćih radova</h2>
       <u1>
         <li><a href="./domaci1_5.10.html">Prvi domaći rad</a></li>
-        <li><a href="./domaci2_7.10.html">Drugi domaći rad</a></li>
+        <li><a href="./domaci2_7.10.html">Drugi i treći domaći rad</a></li>
       </u1>
     </div>
     <div style="float: right; width: 50%">
