--- a/domaci2_7.10.html
+++ b/domaci2_7.10.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Book club</title>
+    <title>Book club Narodne knjižnice i čitaonice Sisak</title>
   </head>
 
   <style>
     body {
       font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+      font-size: smaller;
       max-width: 500px;
       margin: auto;
       color: whitesmoke;
@@ -25,21 +26,25 @@
       top: 0px;
       z-index: -1;
       width: 100%;
-      height: 200%;
-      -webkit-filter: blur (4px);
-      filter: blur(4px);
+      height: 100%;
+      -webkit-filter: blur (6px);
+      filter: blur(6px);
+    }
+
+    textarea {
+      font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
     }
   </style>
 
   <body>
-    <h2>
-      <strong>Učlanjenje u Bookclub Narodne knjižnice i čitaonice Sisak</strong>
-    </h2>
+    <h1>
+      <b>Registracija</b>
+    </h1>
     <img
       class="background"
       src="https://upload.wikimedia.org/wikipedia/commons/1/13/Sisak%2C_z%C3%A1pad_slunce.jpg"
     />
-    <form action method="post">
+    <form action="#" method="get" autocomplete="on">
       <label for="name">Ime</label><br />
       <input type="text" id="name" name="name" />
       <br />
@@ -65,11 +70,12 @@
         name="telephone"
         placeholder="09x-xxx-xxxx"
         pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}"
-        required
       /><br /><br />
       <fieldset>
         <legend>
-          Jeste li učlanjeni u Narodnu knjižnicu i čitaonicu Sisak?
+          <strong
+            >Jeste li učlanjeni u Narodnu knjižnicu i čitaonicu Sisak?</strong
+          >
         </legend>
         <div>
           <input type="radio" id="positive" name="drone" value="positive" />
@@ -81,34 +87,38 @@
         </div>
       </fieldset>
 
-      <label for="checkbox">Označite sve za što ste zainteresirani:</label
-      ><br />
-      <input type="checkbox" id="Bookclub" name="Bookclub" value="Bookclub" />
-      <label for="Bookclub">Bookclub</label><br />
-      <input type="checkbox" id="kviz" name="kviz" value="kviz" />
-      <label for="kviz">Kviz</label><br />
-      <input type="checkbox" id="zamjena" name="zamjena" value="zamjena" />
-      <label for="zamjena">Zamjena knjiga</label><br />
-      <input type="text" name="nesto" id="nesto" value="Predloži nešto!" />
-      <br />
-      <p><strong>Koliko prosječno čitate knjiga mjesečno?</strong></p>
-      <label for="knjige">Odaberite količinu: </label>
-      <br />
-      <input type="range" id="knjige" name="knjige" min="0" max="10" /><br />
-      <input type="submit" />
-
-      <br /><br />
-      <label for="image">Postavite avatar:</label>
-      <input type="file" id="image" /><br />
-
       <p>
         Stvaranjem korisničkog računa pristajete na pridržavanje
-        <a href="#">Pravila korištenja Bookcluba</a>.
+        <a
+          href="https://gkr.hr/Magazin/Teme/Citateljski-klub-upute-za-pocetnike"
+          target="_blank"
+          >Pravila korištenja Bookcluba</a
+        >.
+        <br />
       </p>
 
       <input class="btn-style" type="submit" value="Registriraj se" /><br />
+      <p>
+        <b
+          >Nakon prijavljivanja molimo Vas da ispunite kratki upitnik o Vašim
+          čitateljskim navikama :)</b
+        >
+      </p>
+
+      <!--ovo je kad stisnemo gumb i vodi nas na neki link-->
+
+      <button onclick="window.location.href='./nastavakdomacirad2.html'">
+        Upitnik
+      </button>
+
       <div class="container signin">
-        <p>Već imate korisnički račun? <a href="#">Ulogirajte se</a>.</p>
+        <p>
+          <strong
+            >Već imate korisnički račun?
+            <a href="./registracija.html">Ulogirajte se</a>.</strong
+          >
+          <br />
+        </p>
       </div>
     </form>
   </body>
