--- a/domaci2_7.10.html
+++ b/domaci2_7.10.html
@@ -100,13 +100,15 @@
       <input class="btn-style" type="submit" value="Registriraj se" /><br />
       <p>
         <b
-          >Nakon prijavljivanja molimo Vas da ispunite kratki upitnik o Vašim
-          čitateljskim navikama :)</b
+          >Nakon prijavljivanja molimo Vas da ispunite kratki
+          <a href="./nastavakdomacirad2.html">upitnik</a> o Vašim čitateljskim
+          navikama :)</b
         >
       </p>
 
       <!--ovo je kad stisnemo gumb i vodi nas na neki link-->
 
+      <p><strong></strong></p>
       <button onclick="window.location.href='./nastavakdomacirad2.html'">
         Upitnik
       </button>
