--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
         <u1>
           <li><a href="./pred3.html">Vježbe s 3. predavanja</a></li>
           <li><a href="./pred4.html">Vježbe s 4. predavanja</a></li>
+          <li><a href="./pred5.html">Vježbe s 5. predavanja</a></li>
+          <li><a href="./pred6.html">Vježbe s 6. predavanja</a></li>
         </u1>
       </ul>
     </div>
