--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
           <li><a href="./pred4.html">Vježbe s 4. predavanja</a></li>
           <li><a href="./pred5.html">Vježbe s 5. predavanja</a></li>
           <li><a href="./pred6.html">Vježbe s 6. predavanja</a></li>
+          <li><a href="./CSS/pred7css.html">Vježbe sa 7. predavanja</a></li>
+          <li><a href="./CSS/pred8css.html">Vježbe s 8. predavanja</a></li>
         </u1>
       </ul>
     </div>
