--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
         <li><a href="./domaci1_5.10.html">Prvi domaći rad</a></li>
         <li><a href="./domaci2_7.10.html">Drugi i treći domaći rad</a></li>
         <li><a href="./domacirad4.html">Četvrti domaći rad</a></li>
+        <li><a href="./CSS/domacirad5.html">Peti domaći rad</a></li>
       </u1>
     </div>
     <div style="float: right; width: 50%">
