--- a/index.html
+++ b/index.html
@@ -27,21 +27,8 @@
         <li><a href="./domaci1_5.10.html">Prvi domaći rad</a></li>
         <li><a href="./domaci2_7.10.html">Drugi i treći domaći rad</a></li>
         <li><a href="./domacirad4.html">Četvrti domaći rad</a></li>
-        <li><a href="./CSS/domacirad5.html">Peti domaći rad</a></li>
+        <li><a href="./CSS/domacirad5.html">Peti i šesti domaći rad</a></li>
       </u1>
-    </div>
-    <div style="float: right; width: 50%">
-      <h2>Lista vježbi s predavanja</h2>
-      <ul>
-        <u1>
-          <li><a href="./pred3.html">Vježbe s 3. predavanja</a></li>
-          <li><a href="./pred4.html">Vježbe s 4. predavanja</a></li>
-          <li><a href="./pred5.html">Vježbe s 5. predavanja</a></li>
-          <li><a href="./pred6.html">Vježbe s 6. predavanja</a></li>
-          <li><a href="./CSS/pred7css.html">Vježbe sa 7. predavanja</a></li>
-          <li><a href="./CSS/pred8css.html">Vježbe s 8. predavanja</a></li>
-        </u1>
-      </ul>
     </div>
   </body>
 </html>
