--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <li><a href="./domaci2_7.10.html">Drugi i treći domaći rad</a></li>
         <li><a href="./domacirad4.html">Četvrti domaći rad</a></li>
         <li><a href="./CSS/domacirad5.html">Peti i šesti domaći rad</a></li>
+        <li><a href="./CSS/flexbox1.html">Flexbox</a></li>
       </u1>
     </div>
   </body>
